# ChatCluster

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.hpp
include/server/: chatserver.h  chatservice.h
include/server/db/: db.h
include/server/model/: friendmodel.h  group.hpp  groupmodel.h  groupuser.hpp  offlinemessagemodel.h  user.hpp  usermodel.h
include/server/redis/: redis.h
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
test/01_Json_Test/: makefile  testA1  testA1.cpp  testA2  testA2.cpp
test/02_Muduo_Test/: makefile  muduo_server1  muduo_server1.cpp
test/03_CMake_Test/01_Test/: CMakeLists.txt
test/03_CMake_Test/01_Test/src/: CMakeLists.txt
